--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,9 @@ known-first-party = ["app"]
 python_version = "3.10"
 warn_return_any = true
 warn_unused_ignores = true
-disallow_untyped_defs = false
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
