--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -8,8 +8,6 @@
     "build": "vite build",
     "lint": "eslint .",
     "format": "prettier --write src/",
-    "test": "vitest",
-    "test:run": "vitest run",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,8 +16,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
@@ -27,9 +23,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "jsdom": "^27.4.0",
     "prettier": "^3.7.4",
-    "vite": "^7.2.4",
-    "vitest": "^4.0.16"
+    "vite": "^7.2.4"
   }
 }
